--- a/app/index.html
+++ b/app/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Finaloauth</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/finaloauth.css">
+    <link
+      integrity=""
+      rel="stylesheet"
+      href="http://localhost:4200/assets/vendor.css"
+    />
+    <link
+      integrity=""
+      rel="stylesheet"
+      href="http://localhost:4200/assets/finaloauth.css"
+    />
 
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/finaloauth.js"></script>
+    <script src="http://localhost:4200/assets/vendor.js"></script>
+    <script src="http://localhost:4200/assets/finaloauth.js"></script>
 
     {{content-for "body-footer"}}
   </body>
